[tool.poetry]
name = "HackerNews"
version = "0.1.0"
description = ""
authors = ["temporalio"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4"
temporalio = "^1.6.0"
pandas = "^2.2.2"
aiohttp = "^3.8.4"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
format = [{cmd = "black ."}, {cmd = "isort ."}]
lint = [{cmd = "black --check ."}, {cmd = "isort --check-only ."}]


[tool.isort]
profile = "black"
skip_gitignore = true